--- a/pom.xml
+++ b/pom.xml
@@ -12,14 +12,12 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <driver.path>C:\Users\Олег\Documents\JavaIDEA\lessonWebDriver-master\chromedriver.exe</driver.path>
-    <suite></suite>
   </properties>
 
   <build>
     <resources>
       <resource>
-        <directory>src/test/java/resources</directory>
+        <directory>src/test/resources</directory>
       </resource>
     </resources>
     <plugins>
@@ -34,19 +32,25 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.19.1</version>
         <configuration>
-          <systemPropertyVariables>
-            <webdriver.chrome.driver>${driver.path}</webdriver.chrome.driver>
-          </systemPropertyVariables>
           <includes>
-            <include>**/Runner.java</include>
+            **/Runner.java
           </includes>
+          <systemPropertyVariables>
+            <webdriver.chrome.driver>C:\Users\Олег\Documents\JavaIDEA\lessonWebDriver-master\chromedriver.exe</webdriver.chrome.driver>
+          </systemPropertyVariables>
         </configuration>
       </plugin>
     </plugins>
   </build>
 
   <dependencies>
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>6.11</version>
+    </dependency>
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
@@ -56,11 +60,6 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version>1.16.14</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.8.0</version>
     </dependency>
     <dependency>
       <groupId>info.cukes</groupId>
@@ -75,9 +74,14 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.testng</groupId>
-      <artifactId>testng</artifactId>
+      <groupId>info.cukes</groupId>
+      <artifactId>cucumber-junit</artifactId>
       <version>RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.mifmif</groupId>
+      <artifactId>generex</artifactId>
+      <version>1.0.2</version>
     </dependency>
   </dependencies>
 </project>
